--- a/NUS_DATATHON_SINGLIFE_TEAM_129.ipynb
+++ b/NUS_DATATHON_SINGLIFE_TEAM_129.ipynb
@@ -18,8 +18,12 @@
       },
       "outputs": [],
       "source": [
-        "#%pip install pandas\n",
-        "#%pip install matplotlib\n",
+        "# %pip install pandas \n",
+        "# %pip install pyarrow \n",
+        "# %pip install numpy \n",
+        "# %pip install scikit-learn \n",
+        "# %pip install imbalanced-learn \n",
+        "# %pip install matplotlib\n",
         "# add commented pip installation lines for packages used as shown above for ease of testing\n",
         "# the line should be of the format %pip install PACKAGE_NAME"
       ]
